# experiments-loop-functions

./: CMakeLists.txt
loop-functions/: CMakeLists.txt
loop-functions/SwarmAC/: .AACLoopFunc.cpp.swp  AACLoopFunc.cpp  AACLoopFunc.h  AACLoopFunc_backup.cpp  AACTestLoopFunc.cpp  AACTestLoopFunc.h  AggregationTwoSpotsXOR2.cpp  AggregationTwoSpotsXOR2.h  CMakeLists.txt  Corridor.cpp  Corridor.h  DirectionalGate.cpp  DirectionalGate.h  Foraging.cpp  Foraging.h  Homing.cpp  Homing.h  HomingTest.cpp  HomingTest.h  SCALoopFunc.cpp  SCAaroundLoopFunc.cpp  SCAaroundLoopFunc.h
loop-functions/SwarmBC/: AACLoopFunc.cpp  AACLoopFunc.h  CMakeLists.txt  Corridor.h  DirectionalGate.h  Foraging.cpp  SCALoopFunc.cpp  SCALoopFunc.h
loop-functions/chocolate/AAC/: ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h
loop-functions/comparisonChocolate/: AACLoopFunc.cpp  AACLoopFunc.h  CMakeLists.txt  MADDPGLoopFunc.h
loop-functions/comparisonChocolate/AAC/: AACLoopFunc.cpp  AACLoopFunc.h  AACLoopFuncNewObj.cpp  AACLoopFuncNewObj.h  CMakeLists.txt
loop-functions/comparisonChocolate/SCA/: CMakeLists.txt  SCALoopFunc.cpp  SCALoopFunc.h
loop-functions/example/: ExampleAggregationLoopFunc.cpp
loop-functions/grid-exploration/: CMakeLists.txt  GridExplorationLoopFunc.cpp  GridExplorationLoopFunc.h
loop-functions/localsearch/: AggregationWhiteAndBlackLoopFunc.cpp  GuidedShelterLoopFunc.cpp
loop-functions/sugar/: AggregationLoopFunc.cpp  AggregationLoopFunc.h  CMakeLists.txt
loop-functions/vanilla/: AggregationTwoSpotsLoopFunc.cpp  AggregationTwoSpotsLoopFunc.h  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h
scenarios/example/: aggregation_novisu_chocolate.argos  aggregation_novisu_evostick.argos  aggregation_visu_chocolate.argos  aggregation_visu_evostick.argos
src/: CMakeLists.txt  CoreLoopFunctions.cpp  CoreLoopFunctions.h
src/cmake/: ARGoSBuildChecks.cmake
